--- a/app/assets/css/kurisutiiina/_typography.sass
+++ b/app/assets/css/kurisutiiina/_typography.sass
@@ -29,6 +29,11 @@
 =syncopate
 	font-family: "Syncopate", sans-serif
 
+@import url(https://fonts.googleapis.com/css?family=Dancing+Script:400,700)
+
+=dancing
+	font-family: "Dancing Script", cursive
+
 // icons
 @import url(https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css)
 
