--- a/app/assets/css/_config.sass
+++ b/app/assets/css/_config.sass
@@ -5,3 +5,21 @@
 @font-face
 	font-family: danube2
 	src: url(/app/assets/font/danube2.ttf)
+
+$beige: #eee8d4
+$dark: #272727
+$grey: #e6e9ed
+
+@keyframes bounce
+	0%,
+	20%,
+	50%,
+	80%,
+	100%
+		transform: translateY(0)
+
+	40%
+		transform: translateY(-8px)
+
+	60%
+		transform: translateY(-4px)
