--- a/app/assets/css/_home.sass
+++ b/app/assets/css/_home.sass
@@ -2,74 +2,156 @@
 	.hero
 		@extend .flex-xy
 
-		height: 100vh
-		background: url(/app/assets/img/paper-fibers-1920x1080.png) center center
-		padding: 10%
-		position: relative
+		+raleway
 
-		.hero-light
+		flex-direction: column
+		height: 100vh
+		background: url(/app/assets/img/wide_bg.jpg) center center no-repeat
+		background-size: cover
+		position: relative
+		padding: 20px
+
+		h1
+			z-index: 2
+			font-family: "Raleway", sans-serif
+			font-size: 32px
+			font-weight: 900
+			text-align: center
+			border-bottom: 1px solid #545ab3
+			padding-bottom: 8px
+			margin-bottom: 0
+			line-height: 1
+			color: white
+
+			+media-sm
+				font-size: 60px
+				border-bottom: 2px solid #545ab3
+				padding-bottom: 12px
+
+
+			+media-md
+				font-size: 80px
+				border-bottom: 3px solid #545ab3
+				padding-bottom: 14px
+
+
+			+media-lg-up
+				font-size: 120px
+				border-bottom: 4px solid #545ab3
+				padding-bottom: 16px
+
+		h2
+			z-index: 2
+			text-align: center
+			font-size: 20px
+			color: #aaa
+			margin-top: 10px
+			margin-bottom: 0
+			line-height: 1
+			color: #545ab3
+
+			+media-sm
+				font-size: 24px
+				margin-top: 12px
+
+
+			+media-md
+				font-size: 28px
+				margin-top: 14px
+
+
+			+media-lg-up
+				font-size: 32px
+				font-weight: bold
+				margin-top: 16px
+
+
+			span
+				color: #737df5
+
+		.mouse-icon
+			z-index: 2
+			position: absolute
+			bottom: 10%
+			width: 36px
+			animation: 2s bounce infinite
+			opacity: 0.9
+
+			+media-sm
+				width: 40px
+
+
+			+media-md
+				width: 44px
+
+
+			+media-lg-up
+				width: 48px
+
+		.bg-overlay
 			position: absolute
 			top: 0
 			right: 0
 			bottom: 0
 			left: 0
-			background: -webkit-radial-gradient(ellipse farthest-side, #ffffff, #828590)
-			opacity: 0.3
+			background-color: #30357b
+			z-index: 1
+			opacity: 0.7
 
-		.left-panel
-			flex: 0 0 30%
-			border-right: 1px solid #9b9b9d
-			height: 40%
+	.mission
+		background-color: white
+		padding: 10vw 20vw
+		text-align: center
 
-			.logo
-				font-family: "danube", sans-serif
-				text-align: right
-				font-size: 100px
-				display: flex
-				height: 100%
-				justify-content: flex-end
-				align-items: center
-				padding-right: 5vw
-				background: -webkit-radial-gradient(right center, ellipse farthest-side, rgb(255, 110, 0), rgba(255, 153, 0, 0.88))
-				-webkit-background-clip: text
-				-moz-background-clip: text
-				-webkit-text-fill-color: rgba(255, 183, 0, 0.55)
-				text-shadow: inset 1px 1px black
-				color: transparent
-				text-shadow: rgb(255, 255, 255) -2px 1px 3px
+		h4
+			color: #text
+			margin-bottom: 48px
+			font-weight: 300
 
-		.right-panel
-			flex: 0 0 70%
-			height: 40%
+			+media-lg-up
+				font-size: 40px
 
-			.textbox
-				display: flex
-				flex-direction: column
-				justify-content: center
-				height: 100%
-				padding-left: 5vw
+		p
+			color: $text
+			line-height: 1.8
+			letter-spacing: 1px
+			font-weight: 300
 
-				.textbox-name
-					+syncopate
+	.portfolio-row
+		background-color: $grey
 
-					letter-spacing: 5px
-					font-weight: 300
-					font-size: 60px
-					padding-bottom: 10px
-					background: -webkit-radial-gradient(20% center, circle, #b9b9b9, #555)
-					-webkit-background-clip: text
-					-moz-background-clip: text
-					-webkit-text-fill-color: transparent
+		&.alt
+			background-color: white
 
-				.textbox-description
-					+roboto
+		+media-md-up
+			display: flex
 
-					display: flex
-					align-items: center
-					font-weight: 100
-					font-size: 23px
-					letter-spacing: 5px
-					background: -webkit-radial-gradient(20% center, circle, #a7a7a7, #585858)
-					-webkit-background-clip: text
-					-moz-background-clip: text
-					-webkit-text-fill-color: transparent
+
+		.text-col
+			padding: 80px 48px
+			display: flex
+			flex-direction: column
+			justify-content: center
+
+			h3
+				color: $text
+				font-size: 16px
+				font-weight: normal
+				padding: 20px 0
+
+				+media-md-up
+					font-size: 24px
+
+			p
+				color: $subtext
+				font-size: 14px
+				line-height: 1.8
+
+			+media-md-up
+				flex: 1
+
+		.monitor-col
+			width: 100%
+
+			+media-md-up
+				flex: 1
