--- a/app/assets/css/app.css
+++ b/app/assets/css/app.css
@@ -5,6 +5,7 @@
 @import url(https://fonts.googleapis.com/css?family=Lato:400,100,300,700,900);
 @import url(https://fonts.googleapis.com/css?family=Cormorant+Garamond:400,300,300italic,400italic,500,500italic,600,600italic,700,700italic);
 @import url(https://fonts.googleapis.com/css?family=Syncopate:400,700);
+@import url(https://fonts.googleapis.com/css?family=Dancing+Script:400,700);
 @import url(https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css);
 @import url(https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css);
 @import url(https://fonts.googleapis.com/icon?family=Material+Icons);
@@ -439,74 +440,279 @@ h6 {
 @font-face {
   font-family: danube2;
   src: url(/app/assets/font/danube2.ttf); }
+@keyframes bounce {
+  0%,
+20%,
+50%,
+80%,
+100% {
+    transform: translateY(0); }
+  40% {
+    transform: translateY(-8px); }
+  60% {
+    transform: translateY(-4px); } }
 .home-view .hero {
+  font-family: "Raleway", sans-serif;
+  flex-direction: column;
   height: 100vh;
-  background: url(/app/assets/img/paper-fibers-1920x1080.png) center center;
-  padding: 10%;
-  position: relative; }
-  .home-view .hero .hero-light {
+  background: url(/app/assets/img/wide_bg.jpg) center center no-repeat;
+  background-size: cover;
+  position: relative;
+  padding: 20px; }
+  .home-view .hero h1 {
+    z-index: 2;
+    font-family: "Raleway", sans-serif;
+    font-size: 32px;
+    font-weight: 900;
+    text-align: center;
+    border-bottom: 1px solid #545ab3;
+    padding-bottom: 8px;
+    margin-bottom: 0;
+    line-height: 1;
+    color: white; }
+    @media screen and (min-width: 768px) and (max-width: 991px) {
+      .home-view .hero h1 {
+        font-size: 60px;
+        border-bottom: 2px solid #545ab3;
+        padding-bottom: 12px; } }
+    @media screen and (min-width: 992px) and (max-width: 1199px) {
+      .home-view .hero h1 {
+        font-size: 80px;
+        border-bottom: 3px solid #545ab3;
+        padding-bottom: 14px; } }
+    @media screen and (min-width: 1200px) {
+      .home-view .hero h1 {
+        font-size: 120px;
+        border-bottom: 4px solid #545ab3;
+        padding-bottom: 16px; } }
+  .home-view .hero h2 {
+    z-index: 2;
+    text-align: center;
+    font-size: 20px;
+    color: #aaa;
+    margin-top: 10px;
+    margin-bottom: 0;
+    line-height: 1;
+    color: #545ab3; }
+    @media screen and (min-width: 768px) and (max-width: 991px) {
+      .home-view .hero h2 {
+        font-size: 24px;
+        margin-top: 12px; } }
+    @media screen and (min-width: 992px) and (max-width: 1199px) {
+      .home-view .hero h2 {
+        font-size: 28px;
+        margin-top: 14px; } }
+    @media screen and (min-width: 1200px) {
+      .home-view .hero h2 {
+        font-size: 32px;
+        font-weight: bold;
+        margin-top: 16px; } }
+    .home-view .hero h2 span {
+      color: #737df5; }
+  .home-view .hero .mouse-icon {
+    z-index: 2;
+    position: absolute;
+    bottom: 10%;
+    width: 36px;
+    animation: 2s bounce infinite;
+    opacity: 0.9; }
+    @media screen and (min-width: 768px) and (max-width: 991px) {
+      .home-view .hero .mouse-icon {
+        width: 40px; } }
+    @media screen and (min-width: 992px) and (max-width: 1199px) {
+      .home-view .hero .mouse-icon {
+        width: 44px; } }
+    @media screen and (min-width: 1200px) {
+      .home-view .hero .mouse-icon {
+        width: 48px; } }
+  .home-view .hero .bg-overlay {
     position: absolute;
     top: 0;
     right: 0;
     bottom: 0;
     left: 0;
-    background: -webkit-radial-gradient(ellipse farthest-side, #ffffff, #828590);
-    opacity: 0.3; }
-  .home-view .hero .left-panel {
-    flex: 0 0 30%;
-    border-right: 1px solid #9b9b9d;
-    height: 40%; }
-    .home-view .hero .left-panel .logo {
-      font-family: "danube", sans-serif;
-      text-align: right;
-      font-size: 100px;
-      display: flex;
-      height: 100%;
-      justify-content: flex-end;
-      align-items: center;
-      padding-right: 5vw;
-      background: -webkit-radial-gradient(right center, ellipse farthest-side, #ff6e00, rgba(255, 153, 0, 0.88));
-      -webkit-background-clip: text;
-      -moz-background-clip: text;
-      -webkit-text-fill-color: rgba(255, 183, 0, 0.55);
-      text-shadow: inset 1px 1px black;
-      color: transparent;
-      text-shadow: white -2px 1px 3px; }
-  .home-view .hero .right-panel {
-    flex: 0 0 70%;
-    height: 40%; }
-    .home-view .hero .right-panel .textbox {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      height: 100%;
-      padding-left: 5vw; }
-      .home-view .hero .right-panel .textbox .textbox-name {
-        font-family: "Syncopate", sans-serif;
-        letter-spacing: 5px;
+    background-color: #30357b;
+    z-index: 1;
+    opacity: 0.7; }
+.home-view .mission {
+  background-color: white;
+  padding: 10vw 20vw;
+  text-align: center; }
+  .home-view .mission h4 {
+    color: #text;
+    margin-bottom: 48px;
+    font-weight: 300; }
+    @media screen and (min-width: 1200px) {
+      .home-view .mission h4 {
+        font-size: 40px; } }
+  .home-view .mission p {
+    color: rgba(0, 0, 0, 0.8);
+    line-height: 1.8;
+    letter-spacing: 1px;
+    font-weight: 300; }
+.home-view .portfolio-row {
+  background-color: #e6e9ed; }
+  .home-view .portfolio-row.alt {
+    background-color: white; }
+  @media screen and (min-width: 992px) {
+    .home-view .portfolio-row {
+      display: flex; } }
+  .home-view .portfolio-row .text-col {
+    padding: 80px 48px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center; }
+    .home-view .portfolio-row .text-col h3 {
+      color: rgba(0, 0, 0, 0.8);
+      font-size: 16px;
+      font-weight: normal;
+      padding: 20px 0; }
+      @media screen and (min-width: 992px) {
+        .home-view .portfolio-row .text-col h3 {
+          font-size: 24px; } }
+    .home-view .portfolio-row .text-col p {
+      color: rgba(0, 0, 0, 0.5);
+      font-size: 14px;
+      line-height: 1.8; }
+    @media screen and (min-width: 992px) {
+      .home-view .portfolio-row .text-col {
+        flex: 1; } }
+  .home-view .portfolio-row .monitor-col {
+    width: 100%; }
+    @media screen and (min-width: 992px) {
+      .home-view .portfolio-row .monitor-col {
+        flex: 1; } }
+
+.portfolio-view .portfolio-heading {
+  background-color: white;
+  padding: 64px 48px;
+  font-size: 32px;
+  font-weight: 300;
+  text-align: center;
+  color: rgba(0, 0, 0, 0.8); }
+  @media screen and (min-width: 768px) and (max-width: 991px) {
+    .portfolio-view .portfolio-heading {
+      font-size: 48px;
+      font-weight: 200; } }
+  @media screen and (min-width: 992px) and (max-width: 1199px) {
+    .portfolio-view .portfolio-heading {
+      font-size: 60px;
+      font-weight: 100; } }
+  @media screen and (min-width: 1200px) {
+    .portfolio-view .portfolio-heading {
+      font-size: 72px;
+      font-weight: 100; } }
+.portfolio-view .projects {
+  display: flex;
+  flex-wrap: wrap; }
+  .portfolio-view .projects figure {
+    flex: 0 0 100%;
+    position: relative;
+    float: left;
+    overflow: hidden;
+    margin: 0;
+    background: -webkit-linear-gradient(45deg, #ff89e9 0%, #05abe0 100%);
+    background: linear-gradient(45deg, #ff89e9 0%, #05abe0 100%);
+    text-align: center; }
+    .portfolio-view .projects figure:hover {
+      cursor: pointer; }
+      .portfolio-view .projects figure:hover img {
+        opacity: 0.4; }
+      .portfolio-view .projects figure:hover figcaption:before, .portfolio-view .projects figure:hover figcaption:after {
+        opacity: 1;
+        -webkit-transform: scale(1);
+        transform: scale(1); }
+      .portfolio-view .projects figure:hover p {
+        opacity: 1;
+        -webkit-transform: translate3d(0, 0, 0);
+        transform: translate3d(0, 0, 0); }
+    @media screen and (min-width: 768px) and (max-width: 991px) {
+      .portfolio-view .projects figure {
+        flex: 50%; } }
+    @media screen and (min-width: 992px) {
+      .portfolio-view .projects figure {
+        flex: 0 0 33.33333%; } }
+    .portfolio-view .projects figure img {
+      width: 100%;
+      position: relative;
+      display: block;
+      min-height: 100%;
+      max-width: 100%;
+      opacity: 0.8;
+      -webkit-transition: opacity 350ms;
+      transition: opacity 350ms; }
+    .portfolio-view .projects figure figcaption {
+      padding: 2em;
+      color: #fff;
+      text-transform: uppercase;
+      font-size: 1.25em;
+      -webkit-backface-visibility: hidden;
+      backface-visibility: hidden;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%; }
+      .portfolio-view .projects figure figcaption:before {
+        position: absolute;
+        top: 30px;
+        right: 30px;
+        bottom: 30px;
+        left: 30px;
+        content: "";
+        opacity: 0;
+        -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+        transition: opacity 0.35s, transform 0.35s;
+        border-top: 1px solid #fff;
+        border-bottom: 1px solid #fff;
+        -webkit-transform: scale(0, 1);
+        transform: scale(0, 1);
+        pointer-events: none; }
+      .portfolio-view .projects figure figcaption:after {
+        position: absolute;
+        top: 30px;
+        right: 30px;
+        bottom: 30px;
+        left: 30px;
+        content: "";
+        opacity: 0;
+        -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+        transition: opacity 0.35s, transform 0.35s;
+        border-left: 1px solid #fff;
+        border-right: 1px solid #fff;
+        -webkit-transform: scale(0, 1);
+        transform: scale(1, 0);
+        pointer-events: none; }
+      .portfolio-view .projects figure figcaption h2 {
+        margin: 0;
+        word-spacing: -0.15em;
         font-weight: 300;
-        font-size: 60px;
-        padding-bottom: 10px;
-        background: -webkit-radial-gradient(20% center, circle, #b9b9b9, #555);
-        -webkit-background-clip: text;
-        -moz-background-clip: text;
-        -webkit-text-fill-color: transparent; }
-      .home-view .hero .right-panel .textbox .textbox-description {
-        font-family: "Roboto", sans-serif;
-        display: flex;
-        align-items: center;
-        font-weight: 100;
-        font-size: 23px;
-        letter-spacing: 5px;
-        background: -webkit-radial-gradient(20% center, circle, #a7a7a7, #585858);
-        -webkit-background-clip: text;
-        -moz-background-clip: text;
-        -webkit-text-fill-color: transparent; }
+        padding-top: 30%;
+        -webkit-transition: -webkit-transform 0.35s;
+        transition: transform 0.35s;
+        -webkit-transform: translate3d(0, -20px, 0);
+        transform: translate3d(0, -20px, 0);
+        color: white; }
+        .portfolio-view .projects figure figcaption h2 span {
+          font-weight: 800; }
+      .portfolio-view .projects figure figcaption p {
+        padding: 20px 2.5em;
+        opacity: 0;
+        -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+        transition: opacity 0.35s, transform 0.35s;
+        -webkit-transform: translate3d(0, 20px, 0);
+        transform: translate3d(0, 20px, 0);
+        letter-spacing: 1px;
+        font-size: 68.5%; }
 
 html, body {
+  font-family: "Roboto", sans-serif;
   height: 100%;
   padding: 0;
   margin: 0; }
+
+body.fixed {
+  overflow: hidden; }
 
 .core {
   position: relative; }
@@ -515,6 +721,14 @@ html, body {
   transition: 500ms cubic-bezier(0.4, 0, 0.2, 1);
   -webkit-transform: perspective(0) translateZ(0) rotateY(0) translateX(0);
   transform: perspective(0) translateZ(0) rotateY(0) translateX(0); }
+
+.rotated {
+  height: 100vh;
+  overflow: hidden;
+  -webkit-transform: perspective(1800px) translateZ(-1300px) rotateY(-35deg) translateX(-20%);
+  transform: perspective(1800px) translateZ(-1300px) rotateY(-35deg) translateX(-20%);
+  -webkit-transform-origin: 100% 50%;
+  transform-origin: 100% 50%; }
 
 .view-overlay {
   position: fixed;
@@ -546,22 +760,24 @@ html, body {
   transition: 200ms cubic-bezier(0.4, 0, 0.2, 1); }
   .menu-toggle i {
     font-size: 40px;
-    color: rgba(0, 0, 0, 0.3);
+    color: #737df5;
     transition: 200ms cubic-bezier(0.4, 0, 0.2, 1); }
   .menu-toggle:hover i {
     cursor: pointer;
-    color: rgba(0, 0, 0, 0.7); }
+    color: #b8bdff; }
   .menu-toggle.invis {
     opacity: 0; }
 
 .menu-wrapper {
   position: fixed;
-  background: #ff8c00;
+  background: #272727;
   top: 0;
   right: 0;
   bottom: 0;
   left: 0;
   z-index: -1; }
+  .menu-wrapper.visible {
+    z-index: 0; }
   .menu-wrapper .menu-container {
     position: absolute;
     height: auto;
@@ -571,17 +787,24 @@ html, body {
     transform: translateY(-50%);
     -webkit-transform-style: preserve-3d;
     transform-style: preserve-3d;
-    left: 25%; }
+    left: 12.5%;
+    font-size: 1em; }
+    @media screen and (min-width: 768px) and (max-width: 991px) {
+      .menu-wrapper .menu-container {
+        font-size: 1.5em;
+        left: 20%; } }
+    @media screen and (min-width: 992px) {
+      .menu-wrapper .menu-container {
+        font-size: 2em;
+        left: 20%; } }
     .menu-wrapper .menu-container .menu-link {
-      font-family: "Lato", sans-serif;
       opacity: 0;
       -webkit-transform: translateX(-350px) translateZ(-1000px);
       transform: translateX(-350px) translateZ(-1000px);
       transition: 500ms cubic-bezier(0.4, 0, 0.2, 1);
       white-space: nowrap;
       font-weight: 300;
-      margin: 0 0 30px 0;
-      margin: 0;
+      margin: 0 0 -30px 0;
       color: #fff;
       -webkit-transform-style: preserve-3d;
       transform-style: preserve-3d; }
@@ -608,11 +831,21 @@ html, body {
         color: #fff;
         -webkit-transform-style: preserve-3d;
         transform-style: preserve-3d; }
+        .menu-wrapper .menu-container .menu-link.visible:hover {
+          cursor: pointer; }
 
-.rotated {
-  -webkit-transform: perspective(1800px) translateZ(-1300px) rotateY(-35deg) translateX(-20%);
-  transform: perspective(1800px) translateZ(-1300px) rotateY(-35deg) translateX(-20%);
-  -webkit-transform-origin: 100% 50%;
-  transform-origin: 100% 50%; }
+footer {
+  padding: 48px;
+  background-color: #272727;
+  color: #eee8d4;
+  display: flex;
+  justify-content: space-between;
+  align-items: center; }
+  footer .copyright {
+    font-weight: 300;
+    font-size: 14px; }
+  footer .social i {
+    font-size: 24px;
+    padding-left: 15px; }
 
 /*# sourceMappingURL=app.css.map */
