--- a/app/assets/css/app.sass
+++ b/app/assets/css/app.sass
@@ -1,11 +1,18 @@
 @import kurisutiiina/kurisutiiina
 @import config
+@import nav
 @import home
+@import portfolio
 
 html, body
+	+roboto
+
 	height: 100%
 	padding: 0
 	margin: 0
+
+body.fixed
+	overflow: hidden
 
 .core
 	position: relative
@@ -14,6 +21,14 @@ html, body
 	transition: 500ms $ease-natural
 	-webkit-transform: perspective(0) translateZ(0) rotateY(0) translateX(0)
 	transform: perspective(0) translateZ(0) rotateY(0) translateX(0)
+
+.rotated
+	height: 100vh
+	overflow: hidden
+	-webkit-transform: perspective(1800px) translateZ(-1300px) rotateY(-35deg) translateX(-20%)
+	transform: perspective(1800px) translateZ(-1300px) rotateY(-35deg) translateX(-20%)
+	-webkit-transform-origin: 100% 50%
+	transform-origin: 100% 50%
 
 .view-overlay
 	position: fixed
@@ -48,24 +63,27 @@ html, body
 
 	i
 		font-size: 40px
-		color: rgba(0, 0, 0, 0.3)
+		color: #737df5
 		transition: 200ms $ease-natural
 
 	&:hover i
 		cursor: pointer
-		color: rgba(0, 0, 0, 0.7)
+		color: #b8bdff
 
 	&.invis
 		opacity: 0
 
 .menu-wrapper
 	position: fixed
-	background: #ff8c00
+	background: $dark
 	top: 0
 	right: 0
 	bottom: 0
 	left: 0
 	z-index: -1
+
+	&.visible
+		z-index: 0
 
 	.menu-container
 		position: absolute
@@ -76,19 +94,27 @@ html, body
 		transform: translateY(-50%)
 		-webkit-transform-style: preserve-3d
 		transform-style: preserve-3d
-		left: 25%
+		left: 12.5%
+		font-size: 1em
+
+		+media-sm
+			font-size: 1.5em
+			left: 20%
+
+
+		+media-md-up
+			font-size: 2em
+			left: 20%
+
 
 		.menu-link
-			+lato
-
 			opacity: 0
 			-webkit-transform: translateX(-350px) translateZ(-1000px)
 			transform: translateX(-350px) translateZ(-1000px)
 			transition: 500ms $ease-natural
 			white-space: nowrap
 			font-weight: 300
-			margin: 0 0 30px 0
-			margin: 0
+			margin: 0 0 -30px 0
 			color: #fff
 			-webkit-transform-style: preserve-3d
 			transform-style: preserve-3d
@@ -125,8 +151,21 @@ html, body
 				-webkit-transform-style: preserve-3d
 				transform-style: preserve-3d
 
-.rotated
-	-webkit-transform: perspective(1800px) translateZ(-1300px) rotateY(-35deg) translateX(-20%)
-	transform: perspective(1800px) translateZ(-1300px) rotateY(-35deg) translateX(-20%)
-	-webkit-transform-origin: 100% 50%
-	transform-origin: 100% 50%
+				&:hover
+					cursor: pointer
+
+footer
+	padding: 48px
+	background-color: $dark
+	color: $beige
+	display: flex
+	justify-content: space-between
+	align-items: center
+
+	.copyright
+		font-weight: 300
+		font-size: 14px
+
+	.social i
+		font-size: 24px
+		padding-left: 15px
