--- a/app/assets/css/_home.sass
+++ b/app/assets/css/_home.sass
@@ -17,7 +17,7 @@
 			font-size: 32px
 			font-weight: 900
 			text-align: center
-			border-bottom: 1px solid #545ab3
+			border-bottom: 1px solid #4060ae
 			padding-bottom: 8px
 			margin-bottom: 0
 			line-height: 1
@@ -25,19 +25,19 @@
 
 			+media-sm
 				font-size: 60px
-				border-bottom: 2px solid #545ab3
+				border-bottom: 2px solid #4060ae
 				padding-bottom: 12px
 
 
 			+media-md
 				font-size: 80px
-				border-bottom: 3px solid #545ab3
+				border-bottom: 3px solid #4060ae
 				padding-bottom: 14px
 
 
 			+media-lg-up
 				font-size: 120px
-				border-bottom: 4px solid #545ab3
+				border-bottom: 4px solid #4060ae
 				padding-bottom: 16px
 
 		h2
@@ -48,7 +48,7 @@
 			margin-top: 10px
 			margin-bottom: 0
 			line-height: 1
-			color: #545ab3
+			color: #4060ae
 
 			+media-sm
 				font-size: 24px
@@ -67,7 +67,7 @@
 
 
 			span
-				color: #737df5
+				color: #5886ee
 
 		.mouse-icon
 			z-index: 2
@@ -94,7 +94,7 @@
 			right: 0
 			bottom: 0
 			left: 0
-			background-color: #30357b
+			background-color: #223b70
 			z-index: 1
 			opacity: 0.7
 
