--- a/app/assets/css/app.sass
+++ b/app/assets/css/app.sass
@@ -63,12 +63,12 @@ body.fixed
 
 	i
 		font-size: 40px
-		color: #737df5
+		color: #5886ee
 		transition: 200ms $ease-natural
 
 	&:hover i
 		cursor: pointer
-		color: #b8bdff
+		color: #8fadf1
 
 	&.invis
 		opacity: 0
