--- a/app/assets/css/_home.sass
+++ b/app/assets/css/_home.sass
@@ -8,6 +8,7 @@
 		height: 100vh
 		background: url(/app/assets/img/wide_bg.jpg) center center no-repeat
 		background-size: cover
+		background-attachment: fixed
 		position: relative
 		padding: 20px
 
@@ -43,7 +44,7 @@
 		h2
 			z-index: 2
 			text-align: center
-			font-size: 20px
+			font-size: 14px
 			color: #aaa
 			margin-top: 10px
 			margin-bottom: 0
@@ -69,12 +70,14 @@
 			span
 				color: #5886ee
 
-		.mouse-icon
+		.mouse-anchor
 			z-index: 2
 			position: absolute
 			bottom: 10%
-			width: 36px
 			animation: 2s bounce infinite
+
+		.mouse-icon
+			width: 36px
 			opacity: 0.9
 
 			+media-sm
@@ -100,58 +103,118 @@
 
 	.mission
 		background-color: white
-		padding: 10vw 20vw
+		padding: 15vw 20vw 120px 20vw
 		text-align: center
 
-		h4
-			color: #text
-			margin-bottom: 48px
-			font-weight: 300
+		// h4
+		// 	color: #text
+		// 	margin-bottom: 48px
+		// 	font-weight: 300
 
-			+media-lg-up
-				font-size: 40px
+		// 	+media-lg-up
+		// 		font-size: 40px
+		+media-sm
+			padding: 80px 20vw 240px
+
+
+		+media-md
+			padding: 120px 20vw 320px
+
+
+		+media-lg-up
+			padding: 160px 20vw 400px
+
 
 		p
 			color: $text
-			line-height: 1.8
+			line-height: 36px
 			letter-spacing: 1px
 			font-weight: 300
+			font-size: 16px
+
+			+media-sm-up
+				font-size: 20px
+				line-height: 44px
+
+
+			span.big
+				font-size: 30px
+				font-weight: 900
+				color: #7e8fbd
+
+				+media-sm-up
+					font-size: 40px
+
+			span.emphasis
+				font-weight: 500
+				font-size: 20px
+				color: #7e8fbd
+
+				+media-sm-up
+					font-size: 26px
 
 	.portfolio-row
 		background-color: $grey
+		padding: 15vw 20px 40px
 
-		&.alt
-			background-color: white
-
-		+media-md-up
-			display: flex
-
-
-		.text-col
+		+media-sm
 			padding: 80px 48px
-			display: flex
-			flex-direction: column
-			justify-content: center
 
-			h3
-				color: $text
-				font-size: 16px
-				font-weight: normal
-				padding: 20px 0
 
-				+media-md-up
-					font-size: 24px
-
-			p
-				color: $subtext
-				font-size: 14px
-				line-height: 1.8
-
-			+media-md-up
-				flex: 1
-
-		.monitor-col
+		.projects
+			margin-top: -120px
 			width: 100%
 
-			+media-md-up
-				flex: 1
+			+media-sm
+				margin-top: -220px
+
+
+			+media-md
+				margin-top: -340px
+				width: 70%
+				margin-left: 15%
+
+
+			+media-lg-up
+				margin-top: -300px
+				width: 70%
+				margin-left: 15%
+
+		.projects-link
+			@extend .flex-xy
+
+			margin-top: 10vw
+
+			.text
+				+raleway
+
+				+fg-btn((background-color: #5886ee, color: white))
+
+				font-size: 15px
+				padding: 20px
+				height: 40px
+				border-radius: 20px
+				font-weight: 600
+				position: relative
+				transition: 200ms $ease-natural
+				letter-spacing: 1px
+
+				+media-sm-up
+					font-size: 20px
+					height: 60px
+					padding: 0 30px
+					border-radius: 30px
+					transform: scale(0.95)
+					-webkit-transform: scale(0.95)
+
+					&:hover
+						transform: scale(1)
+						-webkit-transform: scale(1)
+
+
+				+media-md
+					margin-bottom: 60px
+
+
+				+media-lg-up
+					margin-bottom: 100px
