--- a/app/assets/css/app.css
+++ b/app/assets/css/app.css
@@ -279,7 +279,7 @@ h6 {
 .card-5 {
   box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22); }
 
-.flex-xy, .loader, .fg-backdrop, .home-view .hero {
+.flex-xy, .loader, .fg-backdrop, .home-view .hero, .home-view .portfolio-row .projects-link {
   display: flex;
   justify-content: center;
   align-items: center; }
@@ -457,6 +457,7 @@ h6 {
   height: 100vh;
   background: url(/app/assets/img/wide_bg.jpg) center center no-repeat;
   background-size: cover;
+  background-attachment: fixed;
   position: relative;
   padding: 20px; }
   .home-view .hero h1 {
@@ -488,7 +489,7 @@ h6 {
   .home-view .hero h2 {
     z-index: 2;
     text-align: center;
-    font-size: 20px;
+    font-size: 14px;
     color: #aaa;
     margin-top: 10px;
     margin-bottom: 0;
@@ -509,12 +510,13 @@ h6 {
         margin-top: 16px; } }
     .home-view .hero h2 span {
       color: #5886ee; }
-  .home-view .hero .mouse-icon {
+  .home-view .hero .mouse-anchor {
     z-index: 2;
     position: absolute;
     bottom: 10%;
+    animation: 2s bounce infinite; }
+  .home-view .hero .mouse-icon {
     width: 36px;
-    animation: 2s bounce infinite;
     opacity: 0.9; }
     @media screen and (min-width: 768px) and (max-width: 991px) {
       .home-view .hero .mouse-icon {
@@ -536,52 +538,112 @@ h6 {
     opacity: 0.7; }
 .home-view .mission {
   background-color: white;
-  padding: 10vw 20vw;
+  padding: 15vw 20vw 120px 20vw;
   text-align: center; }
-  .home-view .mission h4 {
-    color: #text;
-    margin-bottom: 48px;
-    font-weight: 300; }
-    @media screen and (min-width: 1200px) {
-      .home-view .mission h4 {
-        font-size: 40px; } }
+  @media screen and (min-width: 768px) and (max-width: 991px) {
+    .home-view .mission {
+      padding: 80px 20vw 240px; } }
+  @media screen and (min-width: 992px) and (max-width: 1199px) {
+    .home-view .mission {
+      padding: 120px 20vw 320px; } }
+  @media screen and (min-width: 1200px) {
+    .home-view .mission {
+      padding: 160px 20vw 400px; } }
   .home-view .mission p {
     color: rgba(0, 0, 0, 0.8);
-    line-height: 1.8;
+    line-height: 36px;
     letter-spacing: 1px;
-    font-weight: 300; }
+    font-weight: 300;
+    font-size: 16px; }
+    @media screen and (min-width: 768px) {
+      .home-view .mission p {
+        font-size: 20px;
+        line-height: 44px; } }
+    .home-view .mission p span.big {
+      font-size: 30px;
+      font-weight: 900;
+      color: #7e8fbd; }
+      @media screen and (min-width: 768px) {
+        .home-view .mission p span.big {
+          font-size: 40px; } }
+    .home-view .mission p span.emphasis {
+      font-weight: 500;
+      font-size: 20px;
+      color: #7e8fbd; }
+      @media screen and (min-width: 768px) {
+        .home-view .mission p span.emphasis {
+          font-size: 26px; } }
 .home-view .portfolio-row {
-  background-color: #e6e9ed; }
-  .home-view .portfolio-row.alt {
-    background-color: white; }
-  @media screen and (min-width: 992px) {
+  background-color: #e6e9ed;
+  padding: 15vw 20px 40px; }
+  @media screen and (min-width: 768px) and (max-width: 991px) {
     .home-view .portfolio-row {
-      display: flex; } }
-  .home-view .portfolio-row .text-col {
-    padding: 80px 48px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center; }
-    .home-view .portfolio-row .text-col h3 {
-      color: rgba(0, 0, 0, 0.8);
-      font-size: 16px;
-      font-weight: normal;
-      padding: 20px 0; }
-      @media screen and (min-width: 992px) {
-        .home-view .portfolio-row .text-col h3 {
-          font-size: 24px; } }
-    .home-view .portfolio-row .text-col p {
-      color: rgba(0, 0, 0, 0.5);
-      font-size: 14px;
-      line-height: 1.8; }
-    @media screen and (min-width: 992px) {
-      .home-view .portfolio-row .text-col {
-        flex: 1; } }
-  .home-view .portfolio-row .monitor-col {
+      padding: 80px 48px; } }
+  .home-view .portfolio-row .projects {
+    margin-top: -120px;
     width: 100%; }
-    @media screen and (min-width: 992px) {
-      .home-view .portfolio-row .monitor-col {
-        flex: 1; } }
+    @media screen and (min-width: 768px) and (max-width: 991px) {
+      .home-view .portfolio-row .projects {
+        margin-top: -220px; } }
+    @media screen and (min-width: 992px) and (max-width: 1199px) {
+      .home-view .portfolio-row .projects {
+        margin-top: -340px;
+        width: 70%;
+        margin-left: 15%; } }
+    @media screen and (min-width: 1200px) {
+      .home-view .portfolio-row .projects {
+        margin-top: -300px;
+        width: 70%;
+        margin-left: 15%; } }
+  .home-view .portfolio-row .projects-link {
+    margin-top: 10vw; }
+    .home-view .portfolio-row .projects-link .text {
+      font-family: "Raleway", sans-serif;
+      background-color: #5886ee;
+      box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+      display: inline-flex;
+      position: relative;
+      justify-content: center;
+      align-items: center;
+      border-radius: 2px;
+      padding: 5px 10px;
+      transition: all 200ms cubic-bezier(0.4, 0, 0.2, 1);
+      color: white;
+      font-size: 15px;
+      padding: 20px;
+      height: 40px;
+      border-radius: 20px;
+      font-weight: 600;
+      position: relative;
+      transition: 200ms cubic-bezier(0.4, 0, 0.2, 1);
+      letter-spacing: 1px; }
+      .home-view .portfolio-row .projects-link .text:hover {
+        background-color: #4f79d6;
+        cursor: pointer; }
+      .home-view .portfolio-row .projects-link .text:active {
+        background-color: #547fe2;
+        box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.24), inset 0 1px 2px rgba(0, 0, 0, 0.36); }
+      .home-view .portfolio-row .projects-link .text[disabled] {
+        pointer-events: none;
+        background-color: #82a4f2;
+        opacity: 0.8; }
+      @media screen and (min-width: 768px) {
+        .home-view .portfolio-row .projects-link .text {
+          font-size: 20px;
+          height: 60px;
+          padding: 0 30px;
+          border-radius: 30px;
+          transform: scale(0.95);
+          -webkit-transform: scale(0.95); }
+          .home-view .portfolio-row .projects-link .text:hover {
+            transform: scale(1);
+            -webkit-transform: scale(1); } }
+      @media screen and (min-width: 992px) and (max-width: 1199px) {
+        .home-view .portfolio-row .projects-link .text {
+          margin-bottom: 60px; } }
+      @media screen and (min-width: 1200px) {
+        .home-view .portfolio-row .projects-link .text {
+          margin-bottom: 100px; } }
 
 .portfolio-view .portfolio-heading {
   background-color: white;
@@ -742,14 +804,15 @@ body.fixed {
   pointer-events: none;
   opacity: 0; }
   .view-overlay.lighten {
-    opacity: 0.5;
+    opacity: 0.2;
     pointer-events: initial; }
     .view-overlay.lighten:hover {
       cursor: pointer;
       opacity: 0; }
 
 .view-container {
-  min-height: 100vh; }
+  min-height: 100vh;
+  background-color: white; }
 
 .menu-toggle {
   display: inline-block;
@@ -770,12 +833,23 @@ body.fixed {
 
 .menu-wrapper {
   position: fixed;
-  background: #272727;
+  background: url(/app/assets/img/lights.jpg) center center no-repeat;
+  background-size: cover;
   top: 0;
   right: 0;
   bottom: 0;
   left: 0;
   z-index: -1; }
+  .menu-wrapper:before {
+    content: "";
+    background: -webkit-linear-gradient(135deg, #073e3e 0%, #10143e 100%);
+    background: linear-gradient(135deg, #073e3e 0%, #10143e 100%);
+    opacity: 0.7;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0; }
   .menu-wrapper.visible {
     z-index: 0; }
   .menu-wrapper .menu-container {
@@ -788,15 +862,18 @@ body.fixed {
     -webkit-transform-style: preserve-3d;
     transform-style: preserve-3d;
     left: 12.5%;
-    font-size: 1em; }
+    font-size: 1em;
+    padding-top: 104px; }
     @media screen and (min-width: 768px) and (max-width: 991px) {
       .menu-wrapper .menu-container {
         font-size: 1.5em;
-        left: 20%; } }
+        left: 20%;
+        padding-top: 124px; } }
     @media screen and (min-width: 992px) {
       .menu-wrapper .menu-container {
         font-size: 2em;
-        left: 20%; } }
+        left: 20%;
+        padding-top: 144px; } }
     .menu-wrapper .menu-container .menu-link {
       opacity: 0;
       -webkit-transform: translateX(-350px) translateZ(-1000px);
@@ -808,8 +885,6 @@ body.fixed {
       color: #fff;
       -webkit-transform-style: preserve-3d;
       transform-style: preserve-3d; }
-      .menu-wrapper .menu-container .menu-link.roboto {
-        font-family: "Roboto", sans-serif; }
       .menu-wrapper .menu-container .menu-link:nth-child(2) {
         transition-delay: 80ms; }
       .menu-wrapper .menu-container .menu-link:nth-child(3) {
@@ -833,6 +908,30 @@ body.fixed {
         transform-style: preserve-3d; }
         .menu-wrapper .menu-container .menu-link.visible:hover {
           cursor: pointer; }
+      .menu-wrapper .menu-container .menu-link.social-container {
+        padding-top: 20px; }
+        @media screen and (min-width: 768px) and (max-width: 991px) {
+          .menu-wrapper .menu-container .menu-link.social-container {
+            padding-top: 40px; } }
+        @media screen and (min-width: 992px) {
+          .menu-wrapper .menu-container .menu-link.social-container {
+            padding-top: 60px; } }
+        .menu-wrapper .menu-container .menu-link.social-container i {
+          transition: 200ms cubic-bezier(0.4, 0, 0.2, 1);
+          color: #6e88a9;
+          font-size: 24px; }
+          @media screen and (min-width: 768px) and (max-width: 991px) {
+            .menu-wrapper .menu-container .menu-link.social-container i {
+              font-size: 30px;
+              padding-right: 3px; } }
+          @media screen and (min-width: 992px) {
+            .menu-wrapper .menu-container .menu-link.social-container i {
+              font-size: 36px;
+              padding-right: 6px; } }
+        .menu-wrapper .menu-container .menu-link.social-container .social-link {
+          margin-right: 8px; }
+          .menu-wrapper .menu-container .menu-link.social-container .social-link:hover i {
+            color: white; }
 
 footer {
   padding: 48px;
