--- a/app/assets/css/_config.sass
+++ b/app/assets/css/_config.sass
@@ -6,6 +6,10 @@
 	font-family: danube2
 	src: url(/app/assets/font/danube2.ttf)
 
+@font-face
+	font-family: bebas
+	src: url(/app/assets/font/bebas.ttf)
+
 $beige: #eee8d4
 $dark: #272727
 $grey: #e6e9ed
