--- a/app/assets/css/_home.sass
+++ b/app/assets/css/_home.sass
@@ -14,8 +14,8 @@
 
 		h1
 			z-index: 2
-			font-family: "Raleway", sans-serif
-			font-size: 32px
+			font-family: "danube", "Raleway", sans-serif
+			font-size: 26px
 			font-weight: 900
 			text-align: center
 			border-bottom: 1px solid #4060ae
@@ -25,19 +25,19 @@
 			color: white
 
 			+media-sm
-				font-size: 60px
+				font-size: 44px
 				border-bottom: 2px solid #4060ae
 				padding-bottom: 12px
 
 
 			+media-md
-				font-size: 80px
+				font-size: 52px
 				border-bottom: 3px solid #4060ae
 				padding-bottom: 14px
 
 
 			+media-lg-up
-				font-size: 120px
+				font-size: 60px
 				border-bottom: 4px solid #4060ae
 				padding-bottom: 16px
 
@@ -176,7 +176,7 @@
 
 
 			+media-lg-up
-				margin-top: -300px
+				margin-top: -480px
 				width: 70%
 				margin-left: 15%
 
@@ -217,4 +217,4 @@
 
 
 				+media-lg-up
-					margin-bottom: 100px
+					margin-bottom: 80px
