--- a/app/assets/css/_about.sass
+++ b/app/assets/css/_about.sass
@@ -80,3 +80,76 @@
 
 		&.more
 			background-color: white
+
+		&.resume
+			background-color: white
+			text-align: center
+
+			.resume-btn
+				+raleway
+
+				+fg-btn((background-color: #5886ee, color: white))
+
+				font-size: 15px
+				padding: 20px
+				height: 40px
+				border-radius: 20px
+				font-weight: 600
+				position: relative
+				transition: 200ms $ease-natural
+				letter-spacing: 1px
+
+				+media-sm-up
+					font-size: 20px
+					height: 60px
+					padding: 0 30px
+					border-radius: 30px
+					transform: scale(0.95)
+					-webkit-transform: scale(0.95)
+
+					&:hover
+						transform: scale(1)
+						-webkit-transform: scale(1)
+
+		h2
+			+roboto
+
+			font-size: 16px
+
+		.icon-container
+			img
+				width: 64px
+
+	.skillset-container
+		display: flex
+		flex-direction: column
+		justify-content: space-between
+
+		+media-sm-up
+			flex-direction: row
+
+	.skillset-column
+		padding: 30px 0
+		display: flex
+		flex-direction: column
+
+		+media-sm-up
+			flex: 0 0 33%
+
+	.skillset-subheading
+		font-size: 20px
+		color: #5886ee
+		padding-bottom: 20px
+		text-align: center
+
+	.skillset
+		text-align: center
+		padding: 30px 0
+
+	.skillset-icon
+		display: flex
+		align-items: center
+		justify-content: center
+
+	.skillset-label
+		padding-top: 10px
