--- a/app/assets/css/app.css
+++ b/app/assets/css/app.css
@@ -279,7 +279,7 @@ h6 {
 .card-5 {
   box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22); }
 
-.flex-xy, .loader, .fg-backdrop, .home-view .hero, .home-view .portfolio-row .projects-link, .about-view .about-heading {
+.flex-xy, .loader, .fg-backdrop, .home-view .hero, .home-view .portfolio-row .projects-link, .home-view .projects .portfolio-heading-container, .about-view .about-heading {
   display: flex;
   justify-content: center;
   align-items: center; }
@@ -647,6 +647,147 @@ h6 {
       @media screen and (min-width: 1200px) {
         .home-view .portfolio-row .projects-link .text {
           margin-bottom: 80px; } }
+.home-view .projects {
+  display: flex;
+  flex-wrap: wrap; }
+  .home-view .projects .portfolio-heading-container {
+    width: 100%;
+    background-color: #4060ae; }
+    @media screen and (min-width: 768px) {
+      .home-view .projects .portfolio-heading-container {
+        width: 50%; } }
+    .home-view .projects .portfolio-heading-container .portfolio-heading {
+      font-family: "Roboto", sans-serif;
+      font-size: 36px;
+      color: white;
+      letter-spacing: 1px;
+      position: relative;
+      width: 100%;
+      text-align: center;
+      margin-left: 25px;
+      padding: 120px 0; }
+      @media screen and (min-width: 992px) and (max-width: 1199px) {
+        .home-view .projects .portfolio-heading-container .portfolio-heading {
+          font-size: 42px; } }
+      @media screen and (min-width: 1200px) {
+        .home-view .projects .portfolio-heading-container .portfolio-heading {
+          font-size: 50px; } }
+      .home-view .projects .portfolio-heading-container .portfolio-heading span {
+        vertical-align: top;
+        font-size: 20px;
+        color: #7fa4ff; }
+  .home-view .projects figure {
+    flex: 0 0 100%;
+    position: relative;
+    float: left;
+    overflow: hidden;
+    margin: 0;
+    background: -webkit-linear-gradient(45deg, #c50c9d 0%, #05a1e6 100%);
+    background: linear-gradient(45deg, #c50c9d 0%, #05a1e6 100%);
+    text-align: center; }
+    .home-view .projects figure.figure2 {
+      background: -webkit-linear-gradient(45deg, #c5dc00 0%, #f11e63 100%);
+      background: linear-gradient(45deg, #c5dc00 0%, #f11e63 100%); }
+    .home-view .projects figure.figure3 {
+      background: -webkit-linear-gradient(45deg, #4CAF50 0%, #03A9F4 100%);
+      background: linear-gradient(45deg, #4CAF50 0%, #03A9F4 100%); }
+    .home-view .projects figure:hover {
+      cursor: pointer; }
+      .home-view .projects figure:hover img {
+        opacity: 0.25; }
+      .home-view .projects figure:hover figcaption:before, .home-view .projects figure:hover figcaption:after {
+        opacity: 1;
+        -webkit-transform: scale(1);
+        transform: scale(1); }
+      .home-view .projects figure:hover p {
+        opacity: 1;
+        color: white;
+        -webkit-transform: translate3d(0, 0, 0);
+        transform: translate3d(0, 0, 0); }
+    @media screen and (min-width: 768px) {
+      .home-view .projects figure {
+        flex: 50%; } }
+    .home-view .projects figure img {
+      width: 100%;
+      position: relative;
+      display: block;
+      min-height: 100%;
+      max-width: 100%;
+      opacity: 0.75;
+      -webkit-transition: opacity 350ms;
+      transition: opacity 350ms; }
+    .home-view .projects figure figcaption {
+      padding: 2em;
+      color: #fff;
+      text-transform: uppercase;
+      font-size: 1.25em;
+      -webkit-backface-visibility: hidden;
+      backface-visibility: hidden;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%; }
+      .home-view .projects figure figcaption:before {
+        position: absolute;
+        top: 30px;
+        right: 30px;
+        bottom: 30px;
+        left: 30px;
+        content: "";
+        opacity: 0;
+        -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+        transition: opacity 0.35s, transform 0.35s;
+        border-top: 1px solid #fff;
+        border-bottom: 1px solid #fff;
+        -webkit-transform: scale(0, 1);
+        transform: scale(0, 1);
+        pointer-events: none; }
+      .home-view .projects figure figcaption:after {
+        position: absolute;
+        top: 30px;
+        right: 30px;
+        bottom: 30px;
+        left: 30px;
+        content: "";
+        opacity: 0;
+        -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+        transition: opacity 0.35s, transform 0.35s;
+        border-left: 1px solid #fff;
+        border-right: 1px solid #fff;
+        -webkit-transform: scale(0, 1);
+        transform: scale(1, 0);
+        pointer-events: none; }
+      .home-view .projects figure figcaption h2 {
+        margin: 0;
+        word-spacing: -0.15em;
+        font-weight: 300;
+        padding-top: 30%;
+        -webkit-transition: -webkit-transform 0.35s;
+        transition: transform 0.35s;
+        -webkit-transform: translate3d(0, -20px, 0);
+        transform: translate3d(0, -20px, 0);
+        color: white; }
+        .home-view .projects figure figcaption h2 span {
+          font-weight: 800; }
+        @media screen and (max-width: 767px) {
+          .home-view .projects figure figcaption h2 {
+            font-size: 24px; } }
+        @media screen and (min-width: 768px) and (max-width: 991px) {
+          .home-view .projects figure figcaption h2 {
+            font-size: 18px; } }
+        @media screen and (min-width: 992px) and (max-width: 1199px) {
+          .home-view .projects figure figcaption h2 {
+            font-size: 22px; } }
+      .home-view .projects figure figcaption p {
+        padding: 10px 2.5em;
+        opacity: 0;
+        -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+        transition: opacity 0.35s, transform 0.35s;
+        -webkit-transform: translate3d(0, 20px, 0);
+        transform: translate3d(0, 20px, 0);
+        letter-spacing: 1px;
+        font-size: 68.5%; }
 
 .about-view .about-heading {
   height: 95vh;
@@ -955,10 +1096,10 @@ h6 {
       padding: 120px 20% 25px; } }
   @media screen and (min-width: 1200px) and (max-width: 1599px) {
     .contact-view .mail-form {
-      padding: 140px 20% 25px; } }
+      padding: 180px 20% 25px; } }
   @media screen and (min-width: 1600px) {
     .contact-view .mail-form {
-      padding: 160px 20% 25px; } }
+      padding: 240px 20% 25px; } }
   .contact-view .mail-form h1 {
     font-family: "Raleway", sans-serif;
     color: #5886ee;
